edited readme and added new commands